# ophthalmology-dataset-harmonization

./: .gitignore  AUTOMATED_DISCOVERY_README.md  CODEBOOK.md  DELIVERY_SUMMARY.md  ENHANCEMENTS_COMPLETED.md  INDEX.md  METHODOLOGY.md  NOTEBOOK_GUIDE.md  PROJECT_FILES.md  QUICK_START.md  README.md  README.txt  ROBUST_SCHEMA_SUMMARY.md  RULES.md  SCHEMA.md  SCHEMA_ENHANCEMENT_COMPLETE.md  UPDATES.md  ophthalmology-dataset_harmonization.ipynb  opthalmology-dataset-harmonzation.ipynb  opthalmology-dataset-harmonzation_v6.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  test_expanded_rules.py  test_notebook.py  test_robust_schema.py
DATA-PROCESSING/: CODEBOOK.md  RULES.md  SCHEMA.md
DATA-PROCESSING/src/: __init__.py  rules.py  schema.py
INPUT/: INPUT.md  README.md  input-api.txt
INPUT/cataract-classification-dataset-in-ds/: CODEBOOK.md  DESCRIPTION.md  INTEGRATION.md
archive/: ENHANCEMENT_SUMMARY.md  PROJECT_STRUCTURE.md  SCHEMA_REFERENCE.md  SCHEMA_STATISTICS.md  dataset_harmonization.ipynb
docs/: inputs.md
kaggle/: Kagle datasets.txt  setup_kaggle_api.ps1
notebooks/: dataset_harmonization.ipynb  ophthalmology-dataset_harmonization_v1.ipynb  ophthalmology-dataset_harmonization_v2.ipynb  ophthalmology-dataset_harmonization_v3.ipynb  ophthalmology-dataset_harmonization_v4.ipynb  ophthalmology-dataset_harmonization_v6.ipynb  ophthalmology-dataset_harmonzation_v7.ipynb  ophthalmology-dataset_harmonzation_v8.ipynb  opthalmology-dataset-harmonzation_v6.ipynb
python/: pyproject.toml
src/: rules.py  schema.py
testing/: test_robust_schema.py
(+120 files in other folders)
