[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ophthalmology-dataset-harmonization"
version = "0.1.0"
description = "A unified, scalable pipeline for integrating retinal and ophthalmic imaging datasets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ophthalmology Research Team"}
]
keywords = ["ophthalmology", "harmonization", "datasets", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pyarrow>=10.0.0",
    "fastparquet>=0.8.0",
    "kagglehub>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
]

[tool.pytest.ini_options]
testpaths = ["testing"]
pythonpath = ["DATA-PROCESSING"]
addopts = "-v --tb=short"
